syntax = "proto3";
package cline;
option go_package = "github.com/cline/grpc-go/cline";
option java_package = "bot.cline.proto";
option java_multiple_files = true;

service FeatureFlagsService {
	rpc getFeatureFlag(FeatureFlagRequest) returns (FeatureFlagResponse);
	rpc getFeatureFlagPayload(FeatureFlagRequest) returns (FeatureFlagPayloadResponse);
}

message FeatureFlagRequest {
	string flag_name = 1;
}

message FeatureFlagResponse {
	optional bool enabled = 1;
	optional string value = 2;
}

message FeatureFlagPayloadResponse {
	optional string payload_json = 1;
}

